pkg/main/default/objects/UserSettings__c/UserSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>User Settings</label>
</CustomObject>