pkg/main/default/objects/UserSettings__c/fields/AccessToken0__c.field-meta.xml
<CustomField>
	<fullName>AccessToken0__c</fullName>
	<label>DocuSign OAuth access token part 1</label>
	<length>255</length>
	<type>Text</type>
</CustomField>