pkg/main/default/objects/UserSettings__c/fields/AccessToken1__c.field-meta.xml
<CustomField>
	<fullName>AccessToken1__c</fullName>
	<label>DocuSign OAuth access token part 2</label>
	<length>255</length>
	<type>Text</type>
</CustomField>