pkg/main/default/objects/UserSettings__c/fields/AccessToken2__c.field-meta.xml
<CustomField>
	<fullName>AccessToken2__c</fullName>
	<label>DocuSign OAuth access token part 3</label>
	<length>255</length>
	<type>Text</type>
</CustomField>