pkg/main/default/objects/UserSettings__c/fields/AccessTokenExpires__c.field-meta.xml
<CustomField>
	<fullName>AccessTokenExpires__c</fullName>
	<label>DocuSign OAuth access token expires</label>
	<type>DateTime</type>
</CustomField>