pkg/main/default/objects/UserSettings__c/fields/HideWriteReview__c.field-meta.xml
<CustomField>
    <fullName>HideWriteReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Write Review</label>
    <type>Checkbox</type>
</CustomField>