pkg/main/default/objects/UserSettings__c/fields/Nonce__c.field-meta.xml
<CustomField>
	<fullName>Nonce__c</fullName>
	<label>Nonce</label>
	<length>255</length>
	<type>Text</type>
</CustomField>