pkg/main/default/objects/UserSettings__c/fields/PlatformAuthorizationCheckFrequency__c.field-meta.xml
<CustomField>
	<fullName>PlatformAuthorizationCheckFrequency__c</fullName>
	<defaultValue>15</defaultValue>
	<label>Platform auth minutes between checks</label>
	<precision>6</precision>
	<scale>0</scale>
	<type>Number</type>
</CustomField>