pkg/main/default/objects/UserSettings__c/fields/PlatformAuthorizationLastChecked__c.field-meta.xml
<CustomField>
	<fullName>PlatformAuthorizationLastChecked__c</fullName>
	<label>Platform auth last checked</label>
	<type>DateTime</type>
</CustomField>